--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
   "description": "Portfolio ",
   "main": "index.html",
   "scripts": {
-    "test": "npm test"
+    "dev": "parcel public/index.html",
+    "format": "prettier  \"src/**/*.{js, html}\" --write",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "author": "Svngoku",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "node-hot-loader": "^1.12.3",
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.18.2",
     "webpack": "^4.28.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "github-api": "^3.0.0",
     "nodemon": "^1.18.9",
-    "prismjs": "^1.15.0"
+    "prismjs": "^1.15.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
