--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-hot-loader": "^1.12.3",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
+    "react-render-gist": "^1.0.5",
     "webpack": "^4.28.3"
   },
   "dependencies": {
