--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "axios": "^0.18.0",
     "github-api": "^3.0.0",
     "nodemon": "^1.18.9",
+    "pages": "^0.0.16",
     "prismjs": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-script-tag": "^1.1.2",
     "vue-server-renderer": "^2.6.10"
   }
