--- a/package.json
+++ b/package.json
@@ -6,27 +6,34 @@
   "scripts": {
     "dev": "parcel public/index.html",
     "format": "prettier  \"src/**/*.{js, html}\" --write",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "test": "jest"
   },
   "author": "Svngoku",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "jest": "^24.8.0",
     "node-hot-loader": "^1.12.3",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "react-render-gist": "^1.0.5",
+    "react-test-renderer": "^16.8.6",
     "webpack": "^4.28.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "github-api": "^3.0.0",
+    "jest-enzyme": "^7.0.2",
     "nodemon": "^1.18.9",
     "pages": "^0.0.16",
     "prismjs": "^1.15.0",
