--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-script-tag": "^1.1.2",
     "vue-server-renderer": "^2.6.10"
