--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.0.1",
+    "react-runkit": "^0.9.0",
     "react-script-tag": "^1.1.2",
     "vue-server-renderer": "^2.6.10"
   }
