--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "svngoku.io",
   "version": "1.0.0",
   "description": "Portfolio ",
-  "main": "index.html",
+  "main": "./dist/index.html",
+  "homepage":"https://svngoku.github.io/svngoku.io",
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build src/App.js",
     "format": "prettier  \"src/**/*.{js, html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d build"
   },
   "author": "Svngoku",
   "license": "ISC",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.1.1",
     "github-api": "^3.0.0",
     "jest-enzyme": "^7.0.2",
     "nodemon": "^1.18.9",
