--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svngoku.io",
   "version": "1.0.0",
   "description": "Portfolio ",
-  "main": "./dist/index.html",
+  "main": "public/index.html",
   "homepage":"https://svngoku.github.io/svngoku.io",
   "scripts": {
     "start": "parcel public/index.html",
@@ -11,7 +11,7 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "jest",
     "predeploy": "sudo yarn run build",
-    "deploy": "gh-pages -d /dist"
+    "deploy": "gh-pages -d ./ dist"
   },
   "author": "Svngoku",
   "license": "ISC",
