--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Portfolio ",
   "main": "public/index.html",
-  "homepage":"https://svngoku.github.io/",
+  "homepage": "https://svngoku.github.io/",
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build src/App.js",
@@ -35,6 +35,7 @@
     "webpack": "^4.28.3"
   },
   "dependencies": {
+    "@chec/react-commercejs-hooks": "^0.3.4",
     "axios": "^0.18.0",
     "gh-pages": "^2.1.1",
     "github-api": "^3.0.0",
@@ -42,12 +43,14 @@
     "nodemon": "^1.18.9",
     "pages": "^0.0.16",
     "prismjs": "^1.15.0",
+    "re": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-runkit": "^0.9.0",
     "react-script-tag": "^1.1.2",
+    "styled-components": "^5.3.3",
     "vue-server-renderer": "^2.6.10"
   }
 }
